# STAP_warp

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: avoid_config.yaml  human_config.yaml  human_scenarios.yaml  sequence.yaml  stap_config.yaml  tests.yaml
config/edo/: sequence.yaml  stap_config.yaml  tests.yaml
config/sharework/: human_scenarios.yaml  sequence.yaml  stap_config.yaml  tests.yaml
data/: avoid_gator_chomp_live.csv  avoid_gator_chomp_solver_perf_live.csv  avoid_gator_chomp_solver_perf_sim.csv  avoid_task1_live.csv  avoid_task1_solver_perf_live.csv  avoid_task1_solver_perf_sim.csv  avoid_task3_live.csv  avoid_task3_sim.csv  avoid_task3_solver_perf_live.csv  avoid_task3_solver_perf_sim.csv  dirrt_gator_chomp_solver_perf_live.csv  dirrt_gator_chomp_solver_perf_sim.csv  dirrt_task1_solver_perf_live.csv  dirrt_task1_solver_perf_sim.csv  dirrt_task3_solver_perf_live.csv  dirrt_task3_solver_perf_sim.csv  prob_hamp_gator_chomp_solver_perf_live.csv  prob_hamp_task1_live.csv  prob_hamp_task1_solver_perf_live.csv  prob_hamp_task3_live.csv  prob_hamp_task3_solver_perf_live.csv  sequence_human.csv  sequence_human2.csv  sequence_human3.csv  sequence_sim.csv  sequence_solver_perf.csv  sequence_solver_perf_sim.csv
data/bad_timing/: avoid_gator_chomp_solver_perf_live.csv  avoid_task3_solver_perf_live.csv
data/bad_timing_no_joint_lims/: avoid_gator_chomp_solver_perf_live.csv  avoid_task1_solver_perf_live.csv  avoid_task3_solver_perf_live.csv
data/good_timing/: avoid_gator_chomp_solver_perf_live.csv  avoid_task1_solver_perf_live.csv  avoid_task3_solver_perf_live.csv
data/joint_restrictions/: avoid_gator_chomp_solver_perf_live.csv  avoid_task1_solver_perf_live.csv  avoid_task3_solver_perf_live.csv
data/no_joint_restrictions/: avoid_gator_chomp_solver_perf_live.csv  avoid_task1_solver_perf_live.csv  avoid_task3_solver_perf_live.csv
include/inverse_kinematics/: ik_seed_search.h
include/stap_warp/: sequence.h  stap_warp.h  utilities.h
launch/: blend.launch  eval.launch  live.launch  live_edo.launch  live_sharework.launch  sequence.launch  sequence_edo.launch  sequence_sharework.launch  sharework_get_angles.launch  sharework_go_pos.launch  sharework_grip_interp.launch  sharework_load_scene.launch  sharework_test_grip.launch  sharework_testpos.launch
plans/: sequence_10_plan.bag  sequence_11_plan.bag  sequence_13_plan.bag  sequence_14_plan.bag  sequence_15_plan.bag  sequence_17_plan.bag  sequence_18_plan.bag  sequence_19_plan.bag  sequence_1_plan.bag  sequence_21_plan.bag  sequence_22_plan.bag  sequence_23_plan.bag  sequence_25_plan.bag  sequence_26_plan.bag  sequence_2_plan.bag  sequence_3_plan.bag  sequence_5_plan.bag  sequence_6_plan.bag  sequence_7_plan.bag  sequence_9_plan.bag
plans/edo/: sequence_10_plan.bag  sequence_11_plan.bag  sequence_13_plan.bag  sequence_14_plan.bag  sequence_15_plan.bag  sequence_17_plan.bag  sequence_18_plan.bag  sequence_19_plan.bag  sequence_1_plan.bag  sequence_21_plan.bag  sequence_22_plan.bag  sequence_23_plan.bag  sequence_25_plan.bag  sequence_26_plan.bag  sequence_2_plan.bag  sequence_3_plan.bag  sequence_5_plan.bag  sequence_6_plan.bag  sequence_7_plan.bag  sequence_9_plan.bag
plans/manipulator/: sequence_10_plan.bag  sequence_11_plan.bag  sequence_13_plan.bag  sequence_14_plan.bag  sequence_15_plan.bag  sequence_17_plan.bag  sequence_18_plan.bag  sequence_19_plan.bag  sequence_1_plan.bag  sequence_21_plan.bag  sequence_22_plan.bag  sequence_23_plan.bag  sequence_25_plan.bag  sequence_26_plan.bag  sequence_2_plan.bag  sequence_3_plan.bag  sequence_5_plan.bag  sequence_6_plan.bag  sequence_7_plan.bag  sequence_9_plan.bag
plans/manipulator/test_1/: sequence_10_plan.bag  sequence_11_plan.bag  sequence_13_plan.bag  sequence_14_plan.bag  sequence_15_plan.bag  sequence_17_plan.bag  sequence_18_plan.bag  sequence_19_plan.bag  sequence_1_plan.bag  sequence_21_plan.bag  sequence_22_plan.bag  sequence_23_plan.bag  sequence_25_plan.bag  sequence_26_plan.bag  sequence_2_plan.bag  sequence_3_plan.bag  sequence_5_plan.bag  sequence_6_plan.bag  sequence_7_plan.bag  sequence_9_plan.bag
plans/manipulator/test_1/dirrt_dirrt_paper/: sequence_10_plan.bag  sequence_14_plan.bag  sequence_18_plan.bag  sequence_1_plan.bag  sequence_22_plan.bag  sequence_23_plan.bag  sequence_26_plan.bag  sequence_27_plan.bag  sequence_2_plan.bag  sequence_6_plan.bag
plans/manipulator/test_1/dirrt_multigoal_ssm_test/: sequence_10_plan.bag  sequence_14_plan.bag  sequence_18_plan.bag  sequence_1_plan.bag  sequence_22_plan.bag  sequence_23_plan.bag  sequence_26_plan.bag  sequence_27_plan.bag  sequence_2_plan.bag  sequence_6_plan.bag
plans/manipulator/test_1/irrt_avoid_irrta/: sequence_10_plan.bag  sequence_14_plan.bag  sequence_18_plan.bag  sequence_1_plan.bag  sequence_22_plan.bag  sequence_23_plan.bag  sequence_26_plan.bag  sequence_27_plan.bag  sequence_2_plan.bag  sequence_6_plan.bag
plans/manipulator/test_1/ompl_BiTRRT/: sequence_11_plan.bag  sequence_13_plan.bag  sequence_15_plan.bag  sequence_17_plan.bag  sequence_19_plan.bag  sequence_20_plan.bag  sequence_21_plan.bag  sequence_22_plan.bag  sequence_3_plan.bag  (+7 more)
plans/manipulator/test_2/: sequence_1_plan.bag
sharework_files/: control.rviz  demo.launch  dirrt_jf_test_planning.yaml  dirrt_jf_test_planning_pipeline.launch.xml  dirrt_planning.yaml  irrt_avoid_planning.yaml  irrt_avoid_planning_pipeline.launch.xml  joint_limits.yaml  move_group.launch  moveit.rviz  moveit_predicted_human.rviz  multiple_planning_pipeline.launch.xml  multiple_tests_planning_pipeline.launch.xml  planning_pipeline.launch.xml  stomp_planning.yaml  stomp_planning_pipeline.launch.xml  thor_safety.launch  thor_safety.yaml
src/: blend_test.cpp  load_sequence_scene.cpp  sequence_test.cpp  sharework_get_angles.cpp  sharework_go_to_position.cpp  sharework_gripper_interpretter.cpp  sharework_test_gripper.cpp  sharework_test_position.cpp  test_live.cpp  test_sim.cpp
src/inverse_kinematics/: ik_seed_search.cpp
src/stap_warp/: sequence.cpp  stap_warp.cpp  utilities.cpp
srv/: human_motion_done.srv  human_prediction.srv
(+205 files in other folders)
